[gd_scene load_steps=2 format=3 uid="uid://da4emgfjt344f"]

[ext_resource type="Script" path="res://components/experiment_setup.gd" id="1_3rero"]

[node name="ExperimentSetup" type="CanvasLayer"]
script = ExtResource("1_3rero")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 30
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Quest Number"

[node name="QuestNumberSelection" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
item_count = 2
popup/item_0/text = "16"
popup/item_1/text = "XXX?"
popup/item_1/id = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Experiment Version"

[node name="ExperimentVersionSelection" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
item_count = 2
popup/item_0/text = "LEARNING"
popup/item_1/text = "RECALL"
popup/item_1/id = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Debug Mode"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3/HBoxContainer"]
layout_mode = 2
text = "OFF"

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/HBoxContainer3/HBoxContainer"]
layout_mode = 2
button_pressed = true

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer3/HBoxContainer"]
layout_mode = 2
text = "ON"

[node name="StartExperiment" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "START EXPERIMENT
(go to tutorial)"

[connection signal="item_selected" from="VBoxContainer/HBoxContainer2/QuestNumberSelection" to="." method="_on_quest_number_selection_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/ExperimentVersionSelection" to="." method="_on_experiment_version_selection_item_selected"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer3/HBoxContainer/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="VBoxContainer/StartExperiment" to="." method="_on_start_experiment_pressed"]
